--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Hùng Xuân Gallery</title>
-	<!-- <link rel="shortcut icon" href="favicon.ico" /> -->
+	<link rel="shortcut icon" href="img/love.png" />
 	<link rel="stylesheet" href="https://use.typekit.net/njz5ajv.css" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<script>
@@ -34,13 +34,13 @@
 
 <body class="loading">
 	<main>
-		<h2 class="heading heading--up">Gia Hung</h2>
-		<h2 class="heading heading--down">Xuan Xuan</h2>
+		<h2 class="heading heading--up">Gia Hùng</h2>
+		<h2 class="heading heading--down">Xuân Xuân</h2>
 		<div class="columns" data-scroll-container>
 			<div class="column-wrap column-wrap--height">
 				<div class="column">
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="2">
+						<div class="column__item-imgwrap" data-pos="1">
 							<div class="column__item-img" style="background-image: url(img/1.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -49,7 +49,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="5">
+						<div class="column__item-imgwrap" data-pos="2">
 							<div class="column__item-img" style="background-image: url(img/2.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -58,7 +58,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="8">
+						<div class="column__item-imgwrap" data-pos="3">
 							<div class="column__item-img" style="background-image: url(img/3.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -67,7 +67,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="11">
+						<div class="column__item-imgwrap" data-pos="4">
 							<div class="column__item-img" style="background-image: url(img/4.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -76,7 +76,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="14">
+						<div class="column__item-imgwrap" data-pos="5">
 							<div class="column__item-img" style="background-image: url(img/5.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -85,7 +85,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="17">
+						<div class="column__item-imgwrap" data-pos="6">
 							<div class="column__item-img" style="background-image: url(img/6.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -98,7 +98,7 @@
 			<div class="column-wrap">
 				<div class="column" data-scroll-section>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="1">
+						<div class="column__item-imgwrap" data-pos="7">
 							<div class="column__item-img" style="background-image: url(img/9.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -107,7 +107,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="4">
+						<div class="column__item-imgwrap" data-pos="8">
 							<div class="column__item-img" style="background-image: url(img/10.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -116,7 +116,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="7">
+						<div class="column__item-imgwrap" data-pos="9">
 							<div class="column__item-img" style="background-image: url(img/11.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -125,7 +125,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="10">
+						<div class="column__item-imgwrap" data-pos="11">
 							<div class="column__item-img" style="background-image: url(img/12.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -134,7 +134,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="13">
+						<div class="column__item-imgwrap" data-pos="12">
 							<div class="column__item-img" style="background-image: url(img/13.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -143,7 +143,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="16">
+						<div class="column__item-imgwrap" data-pos="13">
 							<div class="column__item-img" style="background-image: url(img/14.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -157,7 +157,7 @@
 			<div class="column-wrap column-wrap--height">
 				<div class="column">
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="19">
+						<div class="column__item-imgwrap" data-pos="14">
 							<div class="column__item-img" style="background-image: url(img/15.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -166,7 +166,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="22">
+						<div class="column__item-imgwrap" data-pos="15">
 							<div class="column__item-img" style="background-image: url(img/16.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -175,7 +175,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="20">
+						<div class="column__item-imgwrap" data-pos="16">
 							<div class="column__item-img" style="background-image: url(img/7.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -184,7 +184,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="23">
+						<div class="column__item-imgwrap" data-pos="17">
 							<div class="column__item-img" style="background-image: url(img/8.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -193,7 +193,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="3">
+						<div class="column__item-imgwrap" data-pos="18">
 							<div class="column__item-img" style="background-image: url(img/17.png)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -202,7 +202,7 @@
 						</figcaption>
 					</figure>
 					<figure class="column__item">
-						<div class="column__item-imgwrap" data-pos="6">
+						<div class="column__item-imgwrap" data-pos="19">
 							<div class="column__item-img" style="background-image: url(img/18.jpeg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
@@ -210,78 +210,6 @@
 							<span>2022</span>
 						</figcaption>
 					</figure>
-					<!-- <figure class="column__item">
-              <div class="column__item-imgwrap" data-pos="9">
-                <div
-                  class="column__item-img"
-                  style="background-image: url(img/19.jpeg)"
-                ></div>
-              </div>
-              <figcaption class="column__item-caption">
-                <span>Lone Cone</span>
-                <span>2016</span>
-              </figcaption>
-            </figure>
-            <figure class="column__item">
-              <div class="column__item-imgwrap" data-pos="12">
-                <div
-                  class="column__item-img"
-                  style="background-image: url(img/20.jpeg)"
-                ></div>
-              </div>
-              <figcaption class="column__item-caption">
-                <span>Dutch Green</span>
-                <span>2017</span>
-              </figcaption>
-            </figure>
-            <figure class="column__item">
-              <div class="column__item-imgwrap" data-pos="15">
-                <div
-                  class="column__item-img"
-                  style="background-image: url(img/21.jpeg)"
-                ></div>
-              </div>
-              <figcaption class="column__item-caption">
-                <span>Valley Hill</span>
-                <span>2018</span>
-              </figcaption>
-            </figure>
-            <figure class="column__item">
-              <div class="column__item-imgwrap" data-pos="18">
-                <div
-                  class="column__item-img"
-                  style="background-image: url(img/22.jpeg)"
-                ></div>
-              </div>
-              <figcaption class="column__item-caption">
-                <span>Kale Hale</span>
-                <span>2019</span>
-              </figcaption>
-            </figure>
-            <figure class="column__item">
-              <div class="column__item-imgwrap" data-pos="21">
-                <div
-                  class="column__item-img"
-                  style="background-image: url(img/23.jpeg)"
-                ></div>
-              </div>
-              <figcaption class="column__item-caption">
-                <span>Fake Cake</span>
-                <span>2020</span>
-              </figcaption>
-            </figure>
-            <figure class="column__item">
-              <div class="column__item-imgwrap" data-pos="24">
-                <div
-                  class="column__item-img"
-                  style="background-image: url(img/24.jpeg)"
-                ></div>
-              </div>
-              <figcaption class="column__item-caption">
-                <span>Book Belly</span>
-                <span>2021</span>
-              </figcaption>
-            </figure> -->
 				</div>
 				<!-- /column -->
 			</div>
@@ -289,7 +217,7 @@
 
 		<div class="content">
 			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
+				<h2 class="content__item-title">Ha Noi 1</h2>
 				<div class="content__item-text">
 					<span>...</span>
 					<span>2021</span>
@@ -421,69 +349,7 @@
 					<span>2021</span>
 				</div>
 			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
-			<div class="content__item">
-				<h2 class="content__item-title">Ha Noi</h2>
-				<div class="content__item-text">
-					<span>...</span>
-					<span>2021</span>
-				</div>
-			</div>
+
 
 			<nav class="content__nav">
 				<div class="content__nav-wrap">
