--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 						</div>
 						<figcaption class="column__item-caption">
 							<span>Hà Nội</span>
-							<span>2021</span>
+							<span>2022</span>
 						</figcaption>
 					</figure>
 					<figure class="column__item">
@@ -54,7 +54,7 @@
 						</div>
 						<figcaption class="column__item-caption">
 							<span>Hà Nội</span>
-							<span>2021</span>
+							<span>2022</span>
 						</figcaption>
 					</figure>
 					<figure class="column__item">
@@ -63,7 +63,7 @@
 						</div>
 						<figcaption class="column__item-caption">
 							<span>Hà Nội</span>
-							<span>2021</span>
+							<span>2022</span>
 						</figcaption>
 					</figure>
 					<figure class="column__item">
@@ -81,7 +81,7 @@
 						</div>
 						<figcaption class="column__item-caption">
 							<span>Hà Nội</span>
-							<span>2021</span>
+							<span>2022</span>
 						</figcaption>
 					</figure>
 					<figure class="column__item">
@@ -90,7 +90,16 @@
 						</div>
 						<figcaption class="column__item-caption">
 							<span>Hà Nội</span>
-							<span>2021</span>
+							<span>2022</span>
+						</figcaption>
+					</figure>
+					<figure class="column__item">
+						<div class="column__item-imgwrap" data-pos="19">
+							<div class="column__item-img" style="background-image: url(img/19.jpg)"></div>
+						</div>
+						<figcaption class="column__item-caption">
+							<span>Hà Nội</span>
+							<span>2022</span>
 						</figcaption>
 					</figure>
 				</div>
@@ -151,6 +160,15 @@
 							<span>2022</span>
 						</figcaption>
 					</figure>
+					<figure class="column__item">
+						<div class="column__item-imgwrap" data-pos="21">
+							<div class="column__item-img" style="background-image: url(img/20.jpg)"></div>
+						</div>
+						<figcaption class="column__item-caption">
+							<span>Hà Nội</span>
+							<span>2022</span>
+						</figcaption>
+					</figure>
 				</div>
 				<!-- /column -->
 			</div>
@@ -180,7 +198,7 @@
 						</div>
 						<figcaption class="column__item-caption">
 							<span>Hà Nội</span>
-							<span>2021</span>
+							<span>2022</span>
 						</figcaption>
 					</figure>
 					<figure class="column__item">
@@ -210,6 +228,15 @@
 							<span>2022</span>
 						</figcaption>
 					</figure>
+					<figure class="column__item">
+						<div class="column__item-imgwrap" data-pos="22">
+							<div class="column__item-img" style="background-image: url(img/21.jpg)"></div>
+						</div>
+						<figcaption class="column__item-caption">
+							<span>Hà Nội</span>
+							<span>2022</span>
+						</figcaption>
+					</figure>
 				</div>
 				<!-- /column -->
 			</div>
@@ -220,136 +247,156 @@
 				<h2 class="content__item-title">Ha Noi 1</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
-					<span>2021</span>
+					<span>2022</span>
 				</div>
 			</div>
-
+			<div class="content__item">
+				<h2 class="content__item-title">Ha Noi</h2>
+				<div class="content__item-text">
+					<span>...</span>
+					<span>2022</span>
+				</div>
+			</div>
+			<div class="content__item">
+				<h2 class="content__item-title">Ha Noi</h2>
+				<div class="content__item-text">
+					<span>...</span>
+					<span>2022</span>
+				</div>
+			</div>
+			<div class="content__item">
+				<h2 class="content__item-title">Ha Noi</h2>
+				<div class="content__item-text">
+					<span>...</span>
+					<span>2022</span>
+				</div>
+			</div>
 
 			<nav class="content__nav">
 				<div class="content__nav-wrap">
