--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
 	<link rel="shortcut icon" href="img/love.png" />
 	<link rel="stylesheet" href="https://use.typekit.net/njz5ajv.css" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	 <!-- Open Graph / Facebook -->
+	 <meta property="og:type" content="website">
+	 <meta property="og:title" content="Hoang Gia Hung">
+	 <meta property="og:image" content="https://res.cloudinary.com/hunghg255/image/upload/v1649143415/21_ud6new.jpg">
+
+	 <!-- Twitter -->
+	 <meta property="twitter:card" content="summary_large_image">
+	 <meta property="twitter:title" content="Hoang Gia Hung">
+	 <meta property="twitter:image" content="https://res.cloudinary.com/hunghg255/image/upload/v1649143415/21_ud6new.jpg">
+
 	<script>
 		document.documentElement.className = 'js';
 		var supportsCssVars = function () {
@@ -245,6 +255,20 @@
 		<div class="content">
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi 1</h2>
+				<div class="content__item-text">
+					<span>...</span>
+					<span>2022</span>
+				</div>
+			</div>
+			<div class="content__item">
+				<h2 class="content__item-title">Ha Noi</h2>
+				<div class="content__item-text">
+					<span>...</span>
+					<span>2022</span>
+				</div>
+			</div>
+			<div class="content__item">
+				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
 					<span>2022</span>
