--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,15 @@
 							<span>2022</span>
 						</figcaption>
 					</figure>
+					<figure class="column__item">
+						<div class="column__item-imgwrap" data-pos="25">
+							<div class="column__item-img" style="background-image: url(img/24.jpg)"></div>
+						</div>
+						<figcaption class="column__item-caption">
+							<span>Hà Nội</span>
+							<span>2022</span>
+						</figcaption>
+					</figure>
 				</div>
 			</div>
 			<div class="column-wrap">
@@ -173,6 +182,15 @@
 					<figure class="column__item">
 						<div class="column__item-imgwrap" data-pos="21">
 							<div class="column__item-img" style="background-image: url(img/20.jpg)"></div>
+						</div>
+						<figcaption class="column__item-caption">
+							<span>Hà Nội</span>
+							<span>2022</span>
+						</figcaption>
+					</figure>
+					<figure class="column__item">
+						<div class="column__item-imgwrap" data-pos="24">
+							<div class="column__item-img" style="background-image: url(img/23.jpg)"></div>
 						</div>
 						<figcaption class="column__item-caption">
 							<span>Hà Nội</span>
@@ -247,6 +265,15 @@
 							<span>2022</span>
 						</figcaption>
 					</figure>
+					<figure class="column__item">
+						<div class="column__item-imgwrap" data-pos="23">
+							<div class="column__item-img" style="background-image: url(img/22.jpg)"></div>
+						</div>
+						<figcaption class="column__item-caption">
+							<span>Hà Nội</span>
+							<span>2022</span>
+						</figcaption>
+					</figure>
 				</div>
 				<!-- /column -->
 			</div>
@@ -255,6 +282,20 @@
 		<div class="content">
 			<div class="content__item">
 				<h2 class="content__item-title">Ha Noi 1</h2>
+				<div class="content__item-text">
+					<span>...</span>
+					<span>2022</span>
+				</div>
+			</div>
+			<div class="content__item">
+				<h2 class="content__item-title">Ha Noi</h2>
+				<div class="content__item-text">
+					<span>...</span>
+					<span>2022</span>
+				</div>
+			</div>
+			<div class="content__item">
+				<h2 class="content__item-title">Ha Noi</h2>
 				<div class="content__item-text">
 					<span>...</span>
 					<span>2022</span>
