--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,30 @@
                 <span>2022</span>
               </figcaption>
             </figure>
+            <figure class="column__item">
+              <div class="column__item-imgwrap" data-pos="26">
+                <div
+                  class="column__item-img"
+                  style="background-image: url(img/25.jpg)"
+                ></div>
+              </div>
+              <figcaption class="column__item-caption">
+                <span>Hà Nội</span>
+                <span>2022</span>
+              </figcaption>
+            </figure>
+            <figure class="column__item">
+              <div class="column__item-imgwrap" data-pos="29">
+                <div
+                  class="column__item-img"
+                  style="background-image: url(img/28.jpg)"
+                ></div>
+              </div>
+              <figcaption class="column__item-caption">
+                <span>Hà Nội</span>
+                <span>2022</span>
+              </figcaption>
+            </figure>
           </div>
         </div>
         <div class="column-wrap">
@@ -258,6 +282,30 @@
                 <div
                   class="column__item-img"
                   style="background-image: url(img/23.jpg)"
+                ></div>
+              </div>
+              <figcaption class="column__item-caption">
+                <span>Hà Nội</span>
+                <span>2022</span>
+              </figcaption>
+            </figure>
+            <figure class="column__item">
+              <div class="column__item-imgwrap" data-pos="27">
+                <div
+                  class="column__item-img"
+                  style="background-image: url(img/26.jpg)"
+                ></div>
+              </div>
+              <figcaption class="column__item-caption">
+                <span>Hà Nội</span>
+                <span>2022</span>
+              </figcaption>
+            </figure>
+            <figure class="column__item">
+              <div class="column__item-imgwrap" data-pos="30">
+                <div
+                  class="column__item-img"
+                  style="background-image: url(img/29.jpg)"
                 ></div>
               </div>
               <figcaption class="column__item-caption">
@@ -366,6 +414,18 @@
                 <span>2022</span>
               </figcaption>
             </figure>
+            <figure class="column__item">
+              <div class="column__item-imgwrap" data-pos="28">
+                <div
+                  class="column__item-img"
+                  style="background-image: url(img/27.jpg)"
+                ></div>
+              </div>
+              <figcaption class="column__item-caption">
+                <span>Hà Nội</span>
+                <span>2022</span>
+              </figcaption>
+            </figure>
           </div>
           <!-- /column -->
         </div>
@@ -374,6 +434,69 @@
       <div class="content">
         <div class="content__item">
           <h2 class="content__item-title">Ha Noi 1</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
+          <div class="content__item-text">
+            <span>...</span>
+            <span>2022</span>
+          </div>
+        </div>
+        <div class="content__item">
+          <h2 class="content__item-title">Ha Noi</h2>
           <div class="content__item-text">
             <span>...</span>
             <span>2022</span>
